---
title: "Baton — UML Class Diagram: Domain Model"
---
classDiagram
    direction TB

    class Organization {
        +String id
        +String name
        +String slug
        +String plan
        +Number executionsUsed
        +String createdAt
    }

    class User {
        +String id
        +String orgId
        +String email
        +String fullName
        +String role [owner|admin|member|viewer|superuser]
        +String passwordHash [bcrypt cost 12]
        +String inviteToken
        +String inviteExpiresAt
        +String lastActiveAt
        +String createdAt
    }

    class PlatformConnection {
        +String id
        +String orgId
        +String platform
        +String displayName
        +String accountId
        +String status [pending|healthy|warning|error|disconnected]
        +String accessTokenEnc
        +String refreshTokenEnc
        +String tokenExpiresAt
        +String[] scopes
        +Object metadata
        +String webhookSecret
        +String lastSyncAt
        +String createdAt
    }

    class OrgApp {
        +String id
        +String orgId
        +String appSlug
        +String webhookKey [64-char hex capability token]
        +String secretKeyEnc
        +Object sfRegistrations
        +String displayName
        +String status [active|inactive]
        +String lastWebhookAt
        +Number webhookCount
        +String addedAt
    }

    class WebhookEndpoint {
        +String id
        +String orgId
        +String name
        +String platform
        +String workflowId
        +String payloadFieldPath
        +String apiKey
        +Number rateLimitPerMinute
        +Boolean enabled
        +Number requestCount
        +String createdAt
    }

    class Workflow {
        +String id
        +String orgId
        +String name
        +String description
        +String maestroWorkflowId
        +String maestroStatus [draft|active|paused]
        +String triggerType
        +Object triggerInputSchema
        +Number stepCount
        +String connectionId
        +Number launchCount
        +String lastLaunchedAt
        +String createdAt
    }

    class WorkflowInstance {
        +String id
        +String orgId
        +String workflowId
        +String maestroInstanceId
        +String instanceName
        +String status [pending|running|completed|failed|cancelled]
        +String triggerRuleId
        +String sourcePlatform
        +Object inputData
        +String envelopeId
        +String startedAt
        +String completedAt
        +Number durationMs
        +Number retryCount
        +String launchedBy
        +String batchRunId
        +String[] tags
    }

    class AutomationRule {
        +String id
        +String orgId
        +String name
        +String connectionId
        +String appId
        +String appSlug
        +String sourcePlatform
        +String eventType
        +String eventLabel
        +Object conditions
        +String conditionsDisplay
        +String actionType
        +String targetWorkflowId
        +Object actionConfig
        +String webhookKey
        +String status [active|paused|error|disabled]
        +Number retryMaxAttempts
        +String retryStrategy [linear|exponential]
        +Number retryIntervalSec
        +Number timesTriggered
        +Number failureCount
        +Number successRate
        +String lastTriggeredAt
        +String createdAt
        +String createdBy
    }

    class TriggerPipelineEntry {
        +String id
        +String orgId
        +String ruleId
        +String sourcePlatform
        +String eventType [inbound|rule_match|workflow|envelope]
        +String eventSummary
        +Object rawPayload
        +String actionDescription
        +String workflowInstanceId
        +String status [pending|running|retrying|completed|failed|skipped]
        +String errorMessage
        +String userMessage
        +String errorCategory
        +Boolean userActionable
        +String attributedTo
        +String triggeredAt
        +String completedAt
        +Number durationMs
        +Number attemptNumber
        +String webhookEventId
    }

    class WebhookEvent {
        +String id
        +String platform
        +String connectionId
        +String eventType
        +Object payload
        +Object headers
        +Boolean signatureValid
        +Boolean processed
        +String processedAt
        +String error
        +String receivedAt
    }

    class QueuedWebhook {
        +String id
        +String ruleId
        +String orgId
        +String platform
        +String eventType
        +Object rawPayload
        +Object mappedInputs
        +String status [queued|released|cancelled]
        +String queuedAt
        +String releasedAt
    }

    class OAuthState {
        +String state
        +String orgId
        +String userId
        +String platform
        +String codeVerifier
        +Number ttl [10 min]
        +Number createdAt
    }

    class Notification {
        +String id
        +String orgId
        +String recipientId
        +String eventType
        +String title
        +String message
        +String severity [info|warning|error|success]
        +String[] channelsSent
        +String readAt
        +String dismissedAt
        +String createdAt
    }

    class AuditLogEntry {
        +String id
        +String orgId
        +String userId
        +String action
        +String entityType
        +String entityId
        +Object metadata
        +String ipAddress
        +String userAgent
        +String createdAt
    }

    class BatchProcessor {
        +String id
        +String orgId
        +String name
        +String targetWorkflowId
        +Number throttleReleaseCount
        +Number throttleIntervalMinutes
        +Number stopAfterConsecutiveFailures
        +Number maxUnfinishedInstances
        +Number expectedDurationDays
        +String createdAt
    }

    class BatchRun {
        +String id
        +String orgId
        +String batchProcessorId
        +Number runNumber
        +String fileName
        +String fileType [csv|xlsx|tsv]
        +String[] columns
        +Number totalRows
        +String status [draft|running|paused|completed|stopped|cancelled]
        +Object mapping
        +Object settings
        +Number consecutiveFailures
        +String nextReleaseAt
        +String createdAt
    }

    class BatchRow {
        +String runId
        +Number rowNumber
        +String orgId
        +Object data
        +Boolean included
        +String[] problems
        +String status [staged|queued|launching|launched|completed|failed|cancelled|skipped]
        +String workflowInstanceId
        +String errorMessage
    }

    Organization "1" --> "*" User : has members
    Organization "1" --> "*" PlatformConnection : owns
    Organization "1" --> "*" OrgApp : installs
    Organization "1" --> "*" Workflow : manages
    Organization "1" --> "*" AutomationRule : configures
    Organization "1" --> "*" BatchProcessor : owns

    PlatformConnection "1" --> "*" AutomationRule : triggers via
    OrgApp "1" --> "*" AutomationRule : sources events for
    Workflow "1" --> "*" WorkflowInstance : launches
    Workflow "1" --> "*" AutomationRule : targeted by
    WebhookEndpoint ..> Workflow : launches
    AutomationRule "1" --> "*" TriggerPipelineEntry : generates
    AutomationRule "1" --> "*" QueuedWebhook : queues while paused

    BatchProcessor "1" --> "*" BatchRun : runs
    BatchRun "1" --> "*" BatchRow : contains
    BatchRow ..> WorkflowInstance : launches

    PlatformConnection ..> OAuthState : uses during auth
    TriggerPipelineEntry ..> WebhookEvent : originates from
    TriggerPipelineEntry ..> Notification : triggers
    User "1" --> "*" AuditLogEntry : performs actions

    class PlatformConnector {
        &lt;&lt;interface&gt;&gt;
        +Platform platform
        +String displayName
        +authorize(orgId, userId) OAuthAuthorizeResult
        +handleCallback(params) OAuthTokens
        +refreshToken(token) OAuthTokens
        +isTokenExpired(createdAt, expiresIn) Boolean
        +verifyWebhookSignature(rawBody, headers, secret) WebhookVerificationResult
        +extractEventInfo(payload) ExtractedEventInfo
        +testConnection(accessToken) ConnectionHealthCheck
        +getSupportedEventTypes() EventType[]
    }

    class SalesforceConnector {
        +platform = "salesforce" [webhook-only]
    }
    class HubSpotConnector {
        +platform = "hubspot" [webhook-only]
    }
    class ZohoCRMConnector {
        +platform = "zohocrm"
    }
    class ZendeskConnector {
        +platform = "zendesk" [webhook-only]
    }
    class BambooHRConnector {
        +platform = "bamboohr"
    }
    class SmartsheetConnector {
        +platform = "smartsheet"
    }
    class PowerAutomateConnector {
        +platform = "powerautomate" [webhook-only]
    }
    class AirtableConnector {
        +platform = "airtable" [webhook-only]
    }
    class DocuSignConnector {
        +platform = "docusign"
        -authorizationCodeFlow()
    }

    PlatformConnector <|.. SalesforceConnector : implements
    PlatformConnector <|.. HubSpotConnector : implements
    PlatformConnector <|.. ZohoCRMConnector : implements
    PlatformConnector <|.. ZendeskConnector : implements
    PlatformConnector <|.. BambooHRConnector : implements
    PlatformConnector <|.. SmartsheetConnector : implements
    PlatformConnector <|.. PowerAutomateConnector : implements
    PlatformConnector <|.. AirtableConnector : implements
    PlatformConnector <|.. DocuSignConnector : implements

    class EncryptionService {
        +encrypt(plaintext) EncryptedData
        +decrypt(encrypted) String
        +encryptToken(token) String
        +decryptToken(stored) String
    }

    class LocalAuthService {
        +hashPassword(password) String
        +verifyPassword(password, hash) Boolean
        +signSession(userId) String
        +verifySession(token) SessionPayload
        +performSetup(input) OrgAndOwner
    }

    class RuleEngineService {
        +createRule(data) AutomationRule
        +findMatchingRules(orgId, platform, eventType) MatchResult[]
        +processEvent(params) ProcessEventResult
        +updateRuleStatus(id, status) void
        +deleteRule(id) void
    }

    class ConnectionService {
        +createConnection(params) PlatformConnection
        +getAccessToken(connId) String
        +updateTokens(connId, tokens) void
        +updateConnectionStatus(connId, status, error) void
        +deleteConnection(connId) void
    }

    ConnectionService --> EncryptionService : uses
    ConnectionService --> PlatformConnector : delegates to
    RuleEngineService --> PlatformConnector : matches events
